--- a/index.qmd
+++ b/index.qmd
@@ -18,7 +18,7 @@ about:
 
 Currently a postdoctoral associate with responsibilities as both a lead instructor and researcher at Duke University. ![](Duke-University-Logo.png){width="50" height="45" fig-align="right"} 
 
-Training and (insert years) experience in both developing and instructing in-person and online courses in statistics and data science that range from 30 through 170 students. 
+Training and over 8 years experience in both developing and instructing in-person and online courses in statistics and data science that range from 30 through 170 students. 
 
 Current research focuses on how to better the teaching and learning experiences for those involved. Other research interests include sports analytics and creating dynamic tools to support data driven decision making.
 
@@ -27,11 +27,11 @@ Current research focuses on how to better the teaching and learning experiences 
 
 Montana State University | Bozeman, MT ![](MontanaStateUniversity_Icon.png){width="50" height="50" fig-align="right"}
 
-Ph.D. in Statistics with a focus in Education | DATE
+Ph.D. in Statistics with a focus in Education | August 2022
 
 Montana State University | Bozeman, MT ![](MontanaStateUniversity_Icon.png){width="50" height="50" fig-align="right"}
 
-Master's in Statistics | DATE
+Master's in Statistics | May 2018
 
 
 
