--- a/projects/index.qmd
+++ b/projects/index.qmd
@@ -24,34 +24,9 @@ subtitle: ""
 
 <hr/>
 
-### Explore with Shiny: Creating a Statistics Inquiry-Based Learning Tool
+For further descriptions or potential collaboration inquires, please contact me at esm70@duke.edu
 
-Creating a dynamic interactive shiny application in R to better students' understanding of statistics and data science. The application focuses on bootstrapping and permutations. Our application provides students the opportunity to learn about these concepts through investigation, while simultaneously developing the needed coding skills to perform these concepts on their own. 
+<hr/>
 
-This project aims to support teaching at Duke and other universities by continuing the advancement of statistics and data science education, specifically at the undergraduate level. Further, this application sets the foundation for future work to best understand how students learn to code and implement these processes when first being introduced to bootstrapping and permutations.
-
-This project plans to extend to include the development of assessment questions surrounding the application.
-
-### Creating a Data Science Specialization in Coursera
-
-Creating a multi-course Data Science with R specialization for Coursera. This includes modules such as: Data Visualization; Importing + Wrangling Data; Data Ethics; Modeling + Prediction; Inference. This project entails the creation of videos and assessment questions on such topics that self-enrolled students must watch and complete before earning their Data Science with R specialization. 
-
-Currently, I am in the process of creating a Data Science specialization course for Coursera, and am 
-
-### Introductory Data Science: A Blueprint to Navigate Curricular, Pedagogical, and Computational Challenges
-
-Co-authoring a paper *Introductory Data Science: A Blueprint to Navigate Curricular, Pedagogical, and Computational Challenges* that provides a flexible blueprint for instructors to develop or redesign an introductory data science course to include a variety of technologies while simultaneously discussing how to navigate challenges such as large class sizes, and technology integration.
-
-### Motivation Matters: Developing an Instrument to Measure Newer Instructors' Situational Motivation to Use Active Learning in the Classroom when Teaching Statistics
-
-Understanding how self-determined their use of active learning is through their motivations to use active learning can help inform how to support newer instructors’ adoption of such techniques. Thus, we designed a five-phase study to develop an instrument that measures newer statistics instructors’ types of motivations to use active learning.
-
-### Data Driven Disc Golf: Dynamic Interactive Application to help Players Spatially Visualize a Disc Golf Course
-
-Description Coming
-
-### Independent Study 
-
-Pending
-
+For a list of completed projects / work experience, please see [CV]()
 
