update cv link in page

--- a/projects/index.qmd
+++ b/projects/index.qmd
@@ -28,5 +28,5 @@ For further descriptions or potential collaboration inquires, please contact me 
 
 <hr/>
 
-For a list of completed projects / work experience, please see [CV]()
+For a list of completed projects / work experience, please see [CV](https://elijahmeyer3.github.io/website/cv/cv.html)
 
