--- a/PD/PD.qmd
+++ b/PD/PD.qmd
@@ -8,6 +8,8 @@ Spring 2023
 
 Describe training here 
 
+Collaboratively redesigned and updated training preparation materials for TAs in leadership positions in the statistical sciences department at Duke. Co-lead training meeting to prepare TAs on their administrative and teaching responsibilities. 
+
 --   with Dr. Joan Durso & Dr. Mine Çetinkaya-Rundel
 
 
