--- a/teaching/teaching.qmd
+++ b/teaching/teaching.qmd
@@ -63,3 +63,19 @@ Fall 2019 \| Spring 2020
 :::
 
 
+## Teaching Awards 
+
+[Teaching excellence award at MSU: Students who have made a high impact on undergraduates’ lives by helping them grow in knowledge, skill, and confidence](https://www.montana.edu/gradschool/excellence_awards.html) 
+
+2022
+
+[Outstanding Graduate Teaching Assistant Award, Montana State University College of Letters and Science](https://www.montana.edu/news/21240/students-faculty-and-staff-honored-in-2021-cls-awards)
+
+2021
+
+Outstanding Graduate Teaching Assistant Award, Montana State University Department
+of Mathematical Sciences
+
+2017
+
+
