--- a/PD/PD.qmd
+++ b/PD/PD.qmd
@@ -3,22 +3,18 @@ title: "Professional Development"
 subtitle: "Here is an overview of the PD programs I have helped develop, organize, and/or run"
 ---
 
-### Duke Statistical Science Head TA Training 
+### Duke Statistical Science Head TA Training
+
 Spring 2023
 
-Describe training here 
+Collaboratively redesigned and updated training preparation materials for TAs in leadership positions in the statistical sciences department at Duke. Co-lead training meeting to prepare TAs on their administrative and teaching responsibilities.
 
-Collaboratively redesigned and updated training preparation materials for TAs in leadership positions in the statistical sciences department at Duke. Co-lead training meeting to prepare TAs on their administrative and teaching responsibilities. 
+-- with Dr. Joan Durso & Dr. Mine Çetinkaya-Rundel
 
---   with Dr. Joan Durso & Dr. Mine Çetinkaya-Rundel
+### Montana State Excellence in Teaching Symposium
 
+Fall 2017 \| Spring 2018
 
+Collaboratively redesigned and led year-long teaching program for new graduate students. Organized and executed weekly hour-long teaching symposiums, such as Responding to Student Contributions in the Classroom. Mentored new graduate students on how to effectively communicate mathematical and statistical concepts to diverse learners.
 
-### Montana State Excellence in Teaching Symposium 
-
-Fall 2017 \| Spring 2018 
-
-Collaboratively redesigned and led year-long teaching program for new graduate students. Organized and executed weekly hour-long teaching symposiums, such as Responding to Student
-Contributions in the Classroom. Mentored new graduate students on how to effectively communicate mathematical and statistical concepts to diverse learners.
-
---   with Dr. Jennifer Green & Dr. Liz Arnold
+-- with Dr. Jennifer Green & Dr. Liz Arnold
