--- a/publications/publications.qmd
+++ b/publications/publications.qmd
@@ -1,4 +1,26 @@
 ---
 title: "Publications"
-subtitle: "Here is an overview of the project I have been working on."
+subtitle: "Here is an overview of the publications that are published, in review, or in preparation."
 ---
+
+Carnegie, N., Hancock, S., **Meyer, E.**, Schmidt, J., & Yager, M. (2021). [Montana State Introductory  Statistics with R. Montana State University.](https://mtstateintrostats.github.io/IntroStatTextbook/) Adapted from Çetinkaya-Rundel, M. & Hardin, J. (2021). [Introduction to Modern Statistics. OpenIntro.](https://openintro-ims.netlify.app/)
+
+Hammack, R., Gannon, P., Foreman, C., & **Meyer, E.** (2021). [Impacts of professional development focused on teaching engineering applications of mathematics and science.](https://onlinelibrary.wiley.com/doi/10.1111/ssm.12430) School Science and
+Mathematics. 2020; 120: 413-424. 
+
+**Meyer, E.**, Greenwood, M., & Tran, T. (2016) [Statistical methods for detecting groups of patterns in daily step count activity profiles.](https://scholarworks.montana.edu/xmlui/handle/1/14924) Skyline: The Big Sky Undergraduate Journal, 4 (1).
+
+**Meyer, E.**, Greenwood, M., & Tran, T. (2016). Daily Step Count Profile Data for 61 Days [dataset](https://scholarworks.montana.edu/xmlui/handle/1/9897).
+Montana State University ScholarWorks.
+
+<hr/>
+
+## In Review / Preparation
+
+**Meyer, E.**, Green, J., Arnold, L., & Wickstrom, M., (in review) New perspectives on
+understanding graduate student instructors' longitudinal experiences with active learning. Submitted to International Journal of Teacher Education. 
+
+Rubin, N., Tackett, M., Çetinkaya-Rundel, M., & **Meyer, E.,** (in preparation) Evaluating Student Perceptions of Assessment in Quantitative Studies. Preparation to submit to International Journal of STEM Education. 
+
+
+
