--- a/cv/cv.qmd
+++ b/cv/cv.qmd
@@ -6,3 +6,5 @@ subtitle: ""
 ## CV
 
 Please feel free to view and download my full CV [here](https://github.com/ElijahMeyer3/website/blob/main/cv/CV.pdf)
+
+--- Last Updated 6-29-2023
