--- a/pd.qmd
+++ b/pd.qmd
@@ -19,4 +19,4 @@ Montana State University, Fall 2017 and Spring 2018
 
 Redesigned and led year-long teaching program for new graduate students. Organized and executed weekly hour-long teaching symposiums, such as Responding to Student Contributions in the Classroom. Mentored new graduate students on how to effectively communicate mathematical and statistical concepts to diverse learners.
 
-Collaboration with [Dr. Jennifer Green](https://directory.natsci.msu.edu/Directory/Profiles/Person/102588?org=2&group=152) and Dr. Liz Arnold.
+Collaboration with [Dr. Jennifer Green](https://directory.natsci.msu.edu/Directory/Profiles/Person/102588?org=2&group=152) and [Dr. Liz Arnold](https://mathematics.colostate.edu/person/?id=B1577B723415D27B13D66791298FF26F&sq=t).
